Compact GC on Younger Gernation test failed